--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Pittsburgh, Pennsylvania</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Building cars, Basketball, and Reading</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Pittsburgh, Pennsylvania</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Coding has always picqued my interest. I love learning about the technical side of websites and applications.</p>
     </section>
 
     <footer id="footer">
